--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ find_package(Threads)
 target_link_libraries(hog ${CMAKE_THREAD_LIBS_INIT})
 install(TARGETS hog DESTINATION ./bin)
 
-add_custom_target(run ./hog tmp/db/test DEPENDS hog)
+add_custom_target(run ./hog -V tmp/db/test DEPENDS hog)
 add_custom_target(docker docker build -t docker.s21g.com/hog .)
 add_custom_target(push docker push docker.s21g.com/hog)
 
