--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 .DS_Store
-/hog
-/CMakeFiles
-/CMakeCache.txt
-/Makefile
+/build/hog
 /tmp
-/install_manifest.txt
-/src/config.h
-/cmake_install.cmake
+*.o
+*.ok
+/tags
